--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,13 +15,13 @@ jobs:
 
       - name: Remove Old Docker Images
         run: |
-          docker rmi -f $(docker images -q) || true
+          docker stop visualizer || true
+          docker rm visualizer || true
+          docker rmi -f $(docker images -q streamlit-visualizer) || true
 
       - name: Build and Run New Docker Container
         run: |
           docker build --no-cache -t streamlit-visualizer:latest .
-          docker stop visualizer || true
-          docker rm visualizer || true
           docker run -d -p 8501:8501 --name visualizer streamlit-visualizer:latest
 
       - name: Verify Running Containers
