--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,11 +13,15 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Remove Old Docker Images
+      - name: Stop and Remove Old Container
         run: |
           docker stop visualizer || true
           docker rm visualizer || true
+
+      - name: Remove Old Docker Images
+        run: |
           docker rmi -f $(docker images -q streamlit-visualizer) || true
+          docker system prune -af  # Clears old unused images
 
       - name: Build and Run New Docker Container
         run: |
