--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,15 +13,15 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Stop and Remove Old Container
+      - name: Remove Old Containers
         run: |
           docker stop visualizer || true
           docker rm visualizer || true
 
-      - name: Remove Old Docker Images
+      - name: Remove Old Images & Cache
         run: |
           docker rmi -f $(docker images -q streamlit-visualizer) || true
-          docker system prune -af  # Clears old unused images
+          docker system prune -af
 
       - name: Build and Run New Docker Container
         run: |
